--- a/src/patternfly/components/Brand/brand.hbs
+++ b/src/patternfly/components/Brand/brand.hbs
@@ -24,7 +24,7 @@
     {{#if brand--img-url--base}}
       <img src="{{brand--img-url--base}}" alt="Fallback patternFly default logo">
     {{else}}
-      <img src="/assets/images/pf-c-brand__logo-base.jpg" alt="Fallback patternFly default logo">
+      <img src="/assets/images/pf_logo.svg" alt="Fallback patternFly default logo">
     {{/if}}
   </picture>
 {{else}}
